<resources>
    <string name="app_name">Практикум плейлист</string>
    <string name="settings_str">Настройки</string>
    <string name="dark_theme_str">Тёмная тема</string>
    <string name="share_str">Поделиться приложением</string>
    <string name="support_message_str">Написать в поддержку</string>
    <string name="agreement_str">Пользовательское соглашение</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="search_text">Поиск</string>
    <string name="media_text">Медиатека</string>
    <string name="settings_button_text">Настройки</string>
    <string name="settings_share_text">Поделиться приложением</string>
    <string name="UrlPracticum">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="AgreementUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="subjectEmail">"Спасибо за крутое приложение!"</string>
    <string name="DefaultTextEmail">"Email message text"</string>
    <string name="defaultEmail">7links@me.com</string>
    <string name="emailURI">content://path/to/email/attachment</string>
    <string name="search_title_main">Поиск</string>
    <string name="not_find_text">Ничего не нашлось</string>
    <string name="n_n_n">Проблемы со связью \n \n Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="nothig_tobe_find">Ничего не нашлось</string>
    <string name="trouble_with_internet">Проблемы со связью</string>
    <string name="cant_download">Загрузка не удалась.Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="history_text">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_name">Yesterday</string>
    <string name="artist_name">beatles</string>
    <string name="tracktime">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Country">Страна</string>
    <string name="_00_00">0:00</string>
    <string name="uncknow_nalbum">uncknow album</string>
    <string name="uncknown_year">2000</string>
    <string name="uncknown_genre">uncknown genre</string>
    <string name="uncknown_country">uncknown country</string>
    <string name="_0_30">0:30</string>
    <string name="title_activity_media">activity_media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="emptyMedia">Ваша медиатека пуста</string>
    <string name="noplaylist">Вы не создали \n ни одного плейлиста</string>
    <string name="MediaLibrary">Медиатека</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="picture">Картинка</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlistName">Название*</string>
    <string name="create">Создать</string>

    <plurals name="plurals_1">
        <item quantity="zero">%1$d = треков</item>
        <item quantity="one">%1$d = трек</item>
        <item quantity="two">%1$d = трека</item>
        <item quantity="few">%1$d = трека</item>
        <item quantity="many">%1$d = треков</item>
        <item quantity="other">%1$d = треков</item>
    </plurals>

</resources>