<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsScreen"
    android:orientation="vertical"
    android:paddingHorizontal="0dp"
    android:paddingBottom="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/settings_str"
        app:titleTextColor="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_element_height"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical|start"
                android:text="@string/dark_theme_str"
                style="@style/SettingsTextView" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_button"
                android:layout_gravity="center_vertical|end"
                style="@style/SwitchStyle"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_element_height">

            <TextView
                android:text="@string/settings_share_text"
                android:textSize="@dimen/settings_text_size"
                android:layout_gravity="center_vertical|start"
                style="@style/SettingsTextView"
                />

            <ImageView
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/share_icon"
                app:tint="@color/icon_tint_color" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_element_height"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:text="@string/support_message_str"
                android:layout_gravity="center_vertical|start"
                style="@style/SettingsTextView"
                />

            <ImageView
                android:id="@+id/support_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/support_icon"
                app:tint="@color/icon_tint_color" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_element_height"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical|start"
                android:text="@string/agreement_str"
                style="@style/SettingsTextView"
                />

            <ImageView
                android:id="@+id/Terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/arrow_icon"
                app:tint="@color/icon_tint_color" />

        </FrameLayout>



    </LinearLayout>


</LinearLayout>