<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsScreen"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp"
    android:paddingBottom="0dp"
    tools:context=".ActivitySettings">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginStart="@dimen/dp4"
            android:src="@drawable/arrow_back_icon"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:layout_gravity="center_vertical"
            style="@style/SettingsTextView"
            android:layout_marginStart="28dp"
            android:text="@string/settings_str"
            android:textFontWeight="500"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical|start"
            android:text="@string/dark_theme_str"
            style="@style/SettingsTextView" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_button"
            android:layout_gravity="center_vertical|end"
            style="@style/SwitchStyle"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_element_height">

        <TextView
            android:text="@string/settings_share_text"
            android:textSize="@dimen/settings_text_size"
            android:layout_gravity="center_vertical|start"
            style="@style/SettingsTextView"
            />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/share_icon"
            app:tint="@color/icon_tint_color" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_element_height"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:text="@string/support_message_str"
            android:layout_gravity="center_vertical|start"
            style="@style/SettingsTextView"
            />

        <ImageView
            android:id="@+id/support_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/support_icon"
            app:tint="@color/icon_tint_color" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_element_height"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical|start"
            android:text="@string/agreement_str"
            style="@style/SettingsTextView"
            />

        <ImageView
            android:id="@+id/Terms_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/arrow_icon"
            app:tint="@color/icon_tint_color" />

    </FrameLayout>

</LinearLayout>