<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.player.fargments.PlayerFragment">">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_24dp" />

    <ImageView
        android:id="@+id/back_menu_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintEnd_toStartOf="@+id/left_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_icon"
        app:tint="?attr/colorPrimary" />


    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/album"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintDimensionRatio="h, 1:1"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/playerTrackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:text="@string/track_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_22sp"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/album_cover"
        />

    <TextView
        android:id="@+id/playerArtistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:text="@string/artist_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playerTrackName" />

    <ImageButton
        android:id="@+id/playlistAddButton"
        android:layout_width="@dimen/_68dp"
        android:layout_height="@dimen/_68dp"
        android:fillColor="#401A1B22"
        android:layout_marginTop="@dimen/margin_50dp"
        android:background="@drawable/button_add_fav"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playerArtistName"
         />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/play_light"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/favourites"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/playlistAddButton"
        app:layout_constraintTop_toBottomOf="@id/playerArtistName" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:src="@drawable/pause_round"
        android:background="@drawable/pause_round"
        app:layout_constraintEnd_toStartOf="@+id/favourites"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/playlistAddButton"
        app:layout_constraintTop_toBottomOf="@id/playerArtistName"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/favourites"
        android:layout_width="@dimen/_68dp"
        android:layout_height="@dimen/_68dp"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginEnd="@dimen/_4dp_marEnd"
        android:backgroundTintMode="src_atop"
        android:background="@drawable/property"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/playerArtistName"
        />

    <TextView
        android:id="@+id/trackTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_134dp_mrTop"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintEnd_toStartOf="@+id/favourites"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playlistAddButton"
        app:layout_constraintTop_toBottomOf="@+id/playerArtistName"
        tools:text="@string/_0_30"/>

    <TextView
        android:id="@+id/trackTimeName"
        android:layout_width="@dimen/_124dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_75dp_mrTop"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:text="@string/tracktime"
        android:textColor="#AEAFB4"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistAddButton" />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_17dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:text="@string/album"
        android:textColor="#AEAFB4"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackTimeName" />

    <TextView
        android:id="@+id/YearName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_17dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:text="@string/year"
        android:textColor="#AEAFB4"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumName" />

    <TextView
        android:id="@+id/genreName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_17dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:text="@string/Genre"
        android:textColor="#AEAFB4"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/YearName" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_17dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:text="@string/Country"
        android:textColor="#AEAFB4"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreName" />

    <!--Значения полей-->
    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_75dp_mrTop"
        android:layout_marginEnd="@dimen/_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="right"
        android:maxLines="1"
        android:text="@string/_00_00"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trackTimeName"
        app:layout_constraintTop_toBottomOf="@id/playlistAddButton" />

    <TextView
        android:id="@+id/album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="right"
        android:maxLines="1"
        android:text="@string/uncknow_nalbum"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trackTimeName"
        app:layout_constraintTop_toBottomOf="@id/time" />

    <TextView
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="right"
        android:maxLines="1"
        android:text="@string/uncknown_year"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trackTimeName"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="right"
        android:maxLines="1"
        android:text="@string/uncknown_genre"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trackTimeName"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="right"
        android:maxLines="1"
        android:text="@string/uncknown_country"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_14sp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trackTimeName"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/track_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/standardBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners_16"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="?attr/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Добавить в плейлист"
            android:textColor="?attr/colorPrimary"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/newPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:backgroundTint="?attr/colorError"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/newPlaylist"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:cornerRadius="54dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="true" />


    </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>