<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">

    <!--Стрелка назад-->
    <ImageView
        android:id="@+id/playlist_back_button_arrow"
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/playlist_header_text"
        style="@style/SettingsText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/text1"
        app:layout_constraintStart_toEndOf="@id/playlist_back_button_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Обертка плейлиста-->
    <ImageView
        android:id="@+id/playlist_cover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/cover_rounded_corners_and_dash"
        app:cornerRadius="8dp"
        app:layout_constraintDimensionRatio="h, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlist_header_text" />

    <!--Плейсхолдер плейлиста-->
    <ImageView
        android:id="@+id/playlist_place_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:src="@drawable/add_photo"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/playlist_cover"
        app:layout_constraintDimensionRatio="h, 1:1"
        app:layout_constraintEnd_toEndOf="@+id/playlist_cover"
        app:layout_constraintStart_toStartOf="@+id/playlist_cover"
        app:layout_constraintTop_toTopOf="@+id/playlist_cover" />

    <!--Название-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_playlist_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ys_display_regular"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="35"
        android:maxLines="1"
        android:minHeight="54dp"
        android:singleLine="true"
        android:textColor="?attr/colorPrimary"
        android:textColorHint="?attr/colorPrimary"
        android:textSize="@dimen/text2"
        app:boxStrokeColor="@color/text_input_layout_stroke_colors"
        app:hintTextColor="#3772E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlist_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlistName"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="35"
            android:maxLines="1"
            android:textColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorOnSecondary"
            app:boxStrokeColor="@color/text_input_layout_stroke_colors"
            app:hintTextColor="#3772E7" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Описание-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ys_display_regular"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="35"
        android:maxLines="1"
        android:minHeight="54dp"
        android:singleLine="true"
        android:textColor="?attr/colorPrimary"
        android:textColorHint="?attr/colorPrimary"
        android:textSize="@dimen/text2"
        app:boxStrokeColor="@color/text_input_layout_stroke_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_playlist_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_descript_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Описание"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="35"
            android:maxLines="1"
            android:textColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorPrimary"
            app:hintTextColor="#3772E7" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#AEAFB4"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>